--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write ./src",
-    "serve": "vite --host -port 6000"
+    "serve": "vite --host --port 6000"
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.0.3",
